--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
         <h1><a href="index.html">Wael Aboulkacem</a></h1>
         <nav>
             <ul>
-                <li><a href="pages/projets.html">Projets</a></li>
-                <li><a href="/pages/competences.html">Compétences</a></li>
-                <li><a href="/pages/formation.html">Formation</a></li>
+                <li><a href="/pages/projets.html">Projects</a></li>
+                <li><a href="/pages/competences.html">Skills</a></li>
+                <li><a href="/pages/formation.html">Education</a></li>
                 <li><a href="/pages/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="projets">
-        <h2><a href="pages/projets.html">Projets</a></h2>
-        <p>Présentation des projets réalisés.</p>
+        <h2><a href="pages/projets.html">Projects</a></h2>
+        <p>Presentation of My Projects.</p>
     </section>
 
     <section id="competences">
-        <h2><a href="/pages/competences.html">Compétences</a></h2>
-        <p>Liste des compétences techniques et professionnelles.</p>
+        <h2><a href="/pages/competences.html">Skills</a></h2>
+        <p>List of Professional and Technical Skills </p>
     </section>
 
     <section id="formation">
-        <h2><a href="/pages/formation.html">Formation</a></h2>
-        <p>Parcours académique et formations suivies.</p>
+        <h2><a href="/pages/formation.html">Education</a></h2>
+        <p>Academic Background.</p>
     </section>
 
     <section id="contact">
@@ -39,7 +39,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Wael Aboulkacem</p>
+        <p>&copy; 2026 Wael Aboulkacem</p>
     </footer>
 
     <script src="script.js"></script>
