--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,43 +11,43 @@
         <h1><a href="/index.html">Wael Aboulkacem</a></h1>
         <nav>
             <ul>
-                <li><a href="/pages/projets.html">Projets</a></li>
-                <li><a href="/pages/competences.html">Compétences</a></li>
-                <li><a href="/pages/formation.html">Formation</a></li>
+                <li><a href="/pages/projets.html">Projects</a></li>
+                <li><a href="/pages/competences.html">Skills</a></li>
+                <li><a href="/pages/formation.html">Education</a></li>
                 <li><a href="/pages/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="contact-header">
-        <h2>Contactez-moi</h2>
-        <p>Vous pouvez me joindre via les informations ci-dessous ou visiter mes profils professionnels.</p>
+        <h2>Contact Me</h2>
+        <p>You can reach me using the information below or visit my professional profiles.</p>
     </section>
 
     <section id="contact-details">
         <div class="contact-item">
-            <h3>Email</h3>
+            <h3>Mail</h3>
             <p><a href="mailto:waboulkacem1@gmail.com">waboulkacem1@gmail.com</a></p>
         </div>
 
         <div class="contact-item">
             <h3>Location</h3>
-            <p>Toulouse, France</p>
+            <p>Paris, France</p>
         </div>
 
         <div class="contact-item">
             <h3>LinkedIn</h3>
-            <p><a href="https://www.linkedin.com/in/waelaboulkacem" target="_blank">Visitez mon profil LinkedIn</a></p>
+            <p><a href="https://www.linkedin.com/in/waelaboulkacem" target="_blank">Visit my LinkedIn profile</a></p>
         </div>
 
         <div class="contact-item">
             <h3>GitHub</h3>
-            <p><a href="https://github.com/WaelAboulkacem" target="_blank">Visitez mon profil GitHub</a></p>
+            <p><a href="https://github.com/WaelAboulkacem/Data-Exploration" target="_blank">Visit my Github profile</a></p>
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2025 Wael Aboulkacem</p>
+        <p>&copy; 2026 Wael Aboulkacem</p>
     </footer>
 
     <script src="script.js"></script>
