--- a/pages/formation.html
+++ b/pages/formation.html
@@ -11,77 +11,78 @@
         <h1><a href="/index.html">Wael Aboulkacem</a></h1>
         <nav>
             <ul>
-                <li><a href="/pages/projets.html">Projets</a></li>
-                <li><a href="/pages/competences.html">Compétences</a></li>
-                <li><a href="/pages/formation.html">Formation</a></li>
+                <li><a href="/pages/projets.html">Projects</a></li>
+                <li><a href="/pages/competences.html">Skills</a></li>
+                <li><a href="/pages/formation.html">Education</a></li>
                 <li><a href="/pages/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="formation">
-        <h2>Ma Formation</h2>
-        <p>Voici un aperçu de ma formation académique à l'Université Jean Jaurès dans le cadre de la Licence MIASHS.</p>
+    <h2>My Education</h2>
+    <p>Here is an overview of my academic background at the University Jean Jaurès as part of the MIASHS Bachelor's degree.</p>
 
-        <div class="formation-detail">
-            <h3>Licence Mathématiques et Informatique Appliquées aux Sciences Humaines et Sociales (MIASHS) , parcours Informatique - Université Jean Jaurès (Toulouse)</h3>
-            <p><strong>Année : 2023 - Présent</strong></p>
-            <p>Cette formation m'a permis d'acquérir des compétences solides dans les domaines des mathématiques appliquées, de l'informatique, de la statistique et des sciences sociales. Voici les matières étudiées pendant mes semestres :</p>
+    <div class="formation-detail">
+        <h3>Bachelor's in Mathematics and Computer Science Applied to Human and Social Sciences (MIASHS), Computer Science track - University Jean Jaurès (Toulouse)</h3>
+        <p><strong>Year: 2023 - Present</strong></p>
+        <p>This program has allowed me to acquire solid skills in applied mathematics, computer science, statistics, and social sciences. Here are the subjects studied during my semesters:</p>
 
-            <div class="semester">
-                <h4>Semestre 1 :</h4>
-                <ul>
-                    <li>Bases de données : modélisation et interrogation</li>
-                    <li>Calcul algébrique	</li>
-                    <li>Statistique descriptive	</li>
-                    <li>Fonctions réelles	</li>
-                    <li>Comptabilité générale	</li>
-                    <li>Introduction à la gestion des organisations</li>
-                    <li>Bases de l'algorithmique et de la programmation/Méthodologie</li>
-                </ul>
-            </div>
-
-            <div class="semester">
-                <h4>Semestre 2 :</h4>
-                <ul>
-                    <li>Concepts et mécanismes généraux/Algorithmique-Programmation</li>
-                    <li>Algèbre linéaire dans le plan et dans l'espace</li>
-                    <li>Etude locale de fonctions	</li>
-                    <li>Bases de Données : normalisation et implémentation</li>
-                    <li>De la comptabilité à la gestion financière</li>
-                    <li>Statistique descriptive - études de cas</li>
-                </ul>
-            </div>
-
-            <div class="semester">
-                <h4>Semestre 3 :</h4>
-                <ul>
-                    <li>Algorithmique-Programmation et Base de Données avancées</li>
-                    <li>Structures de données et récursivité / Client Web</li>
-                    <li>Arithmétique des entiers et des polynômes</li>
-                    <li>Probabilités	</li>
-                    <li>Système d'exploitation/Réseau/Architecture des ordinateurs</li>
-                    <li>Espagnol : Niveau C1</li>
-                </ul>
-            </div>
-
-            <div class="semester">
-                <h4>Semestre 4 :</h4>
-                <ul>
-                    <li>Ingénierie des Systèmes Interactifs/Programmation Web</li>
-                    <li>Programmation orientée objet	</li>
-                    <li>Algèbre linéaire sur les réels et sur un corps fini	</li>
-                    <li>Statistique inférentielle / Projet informatique-statistique</li>
-                    <li>Introduction à l'IA/Projet Informatique-SHS</li>
-                    <li>Espagnol : Niveau C1</li>
-                </ul>
-            </div>
-
+        <div class="semester">
+            <h4>Semester 1:</h4>
+            <ul>
+                <li>Databases: Modeling and Querying</li>
+                <li>Algebraic Calculus</li>
+                <li>Descriptive Statistics</li>
+                <li>Real Functions</li>
+                <li>General Accounting</li>
+                <li>Introduction to Organizational Management</li>
+                <li>Fundamentals of Algorithmics and Programming / Methodology</li>
+            </ul>
         </div>
-    </section>
+
+        <div class="semester">
+            <h4>Semester 2:</h4>
+            <ul>
+                <li>General Concepts and Mechanisms / Algorithmics-Programming</li>
+                <li>Linear Algebra in the Plane and in Space</li>
+                <li>Local Study of Functions</li>
+                <li>Databases: Normalization and Implementation</li>
+                <li>From Accounting to Financial Management</li>
+                <li>Descriptive Statistics - Case Studies</li>
+            </ul>
+        </div>
+
+        <div class="semester">
+            <h4>Semester 3:</h4>
+            <ul>
+                <li>Algorithmics-Programming and Advanced Databases</li>
+                <li>Data Structures and Recursion / Web Client</li>
+                <li>Arithmetic of Integers and Polynomials</li>
+                <li>Probability</li>
+                <li>Operating Systems / Networks / Computer Architecture</li>
+                <li>Spanish: Level C1</li>
+            </ul>
+        </div>
+
+        <div class="semester">
+            <h4>Semester 4:</h4>
+            <ul>
+                <li>Interactive Systems Engineering / Web Programming</li>
+                <li>Object-Oriented Programming</li>
+                <li>Linear Algebra over the Reals and over a Finite Field</li>
+                <li>Inferential Statistics / Computer-Statistics Project</li>
+                <li>Introduction to AI / Computer-SHS Project</li>
+                <li>Spanish: Level C1</li>
+            </ul>
+        </div>
+
+    </div>
+</section>
+
 
     <footer>
-        <p>&copy; 2025 Wael Aboulkacem</p>
+        <p>&copy; 2026 Wael Aboulkacem</p>
     </footer>
 
     <script src="script.js"></script>
