--- a/pages/projets.html
+++ b/pages/projets.html
@@ -11,17 +11,17 @@
         <h1><a href="/index.html">Wael Aboulkacem</a></h1>
         <nav>
             <ul>
-                <li><a href="/pages/projets.html">Projets</a></li>
-                <li><a href="/pages/competences.html">Compétences</a></li>
-                <li><a href="/pages/formation.html">Formation</a></li>
+                 <li><a href="/pages/projets.html">Projects</a></li>
+                <li><a href="/pages/competences.html">Skills</a></li>
+                <li><a href="/pages/formation.html">Education</a></li>
                 <li><a href="/pages/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="projets">
-        <h2>Mes Projets</h2>
-        <p>Voici une sélection de mes projets récents.</p>
+        <h2>My Projects</h2>
+        <p>Here is a selection of my recent projects.</p>
 
         <div class="projets-container">
             <!-- Proyecto 1 -->
@@ -29,20 +29,22 @@
                 <div class="projet-thumbnail">
                     <img src="/coche.png" alt="Projet 1" />
                 </div>
-                <h3>Système de prédiction du prix des voitures avec Machine Learning et Tkinter                </h3>
-                <p>J'ai développé un système de prédiction du prix des voitures basé sur l'apprentissage automatique, en utilisant les informations d'une base de données. J'ai testé plusieurs modèles jusqu'à ce que je trouve le plus précis et j'ai créé une interface en Tkinter où l'utilisateur entre les informations sur la voiture pour obtenir une estimation du prix.
-                    J'ai utilisé Pandas, Scikit-learn, Matplotlib et Seaborn pour l'analyse et l'optimisation du modèle. Ce projet intègre l'analyse de données, la modélisation prédictive et le développement d'une interface interactive.</p>
-                <a href="https://github.com/WaelAboulkacem/Data-Exploration/blob/main/Predict_Price_Car.ipynb">Voir le projet</a>
+                <h3>Car Price Prediction System with Machine Learning and Tkinter               </h3>
+                <p>I built a machine learning system that predicts car prices using a trained model and an interactive Tkinter interface. Users enter car details and instantly receive an estimated value.
+The project uses Pandas, Scikit-learn, Matplotlib, and Seaborn, combining data analysis, predictive modeling, and UI development.</p>
+                <a href="https://github.com/WaelAboulkacem/Data-Exploration/blob/main/Predict_Price_Car.ipynb">See the project</a>
             </div>
 
             <!-- Proyecto 2 -->
             <div class="projet-item">
                 <div class="projet-thumbnail">
-                    <img src="/cole.jpg" alt="Projet 2" />
+                    <img src="/ai.png" alt="Projet 2" />
                 </div>
-                <h3>Analyse des résultats et prédiction des résultats de la Premier League                </h3>
-                <p>J'ai développé un modèle de machine learning pour la prédiction des résultats d'une journée de Premier League, en utilisant des données obtenues par le biais d'une API. J'ai analysé et visualisé les données à l'aide de Pandas, Matplotlib et Seaborn, en explorant la relation entre les buts pour et les buts contre, à la fois à domicile et à l'extérieur. Enfin, j'ai utilisé scikit-learn en appliquant des techniques de modélisation prédictive pour estimer les scores possibles.</p>
-                <a href="https://github.com/WaelAboulkacem/Data-Exploration/blob/main/Premier_League_Analysis.ipynb">Voir le projet</a>
+                <h3>AI Email Assistant                </h3>
+                <p>This project features an AI-powered email assistant built with n8n.
+Incoming emails are automatically classified using OpenAI GPT, which also generates a draft reply. The response is then sent to a human reviewer through gotoHuman for validation. Once approved or edited, the final email is sent back through Gmail.
+The result is a seamless, end-to-end system that combines AI automation with human oversight.</p>
+                <a href="https://github.com/WaelAboulkacem/Data-Exploration/tree/main/AI%20Email%20Assistant">See the project</a>
             </div>
 
             <!-- Proyecto 3 -->
@@ -50,25 +52,25 @@
                 <div class="projet-thumbnail">
                     <img src="/coche.jpeg" alt="Projet 3" />
                 </div>
-                <h3>Analyse des ventes de voitures : tendances et facteurs clés                </h3>
-                <p>Une analyse exploratoire des données a servi à identifier des modèles et à répondre à des questions clés sur les ventes de voitures. J'ai utilisé Pandas pour nettoyer et manipuler les données, ainsi que Matplotlib et Seaborn pour visualiser les tendances des ventes en fonction de variables telles que la marque, le modèle et l'année.</p>
-                <a href="https://github.com/WaelAboulkacem/Data-Exploration/blob/main/Car%20Sales%20Analysis.ipynb">Voir le projet</a>
+                <h3>Car Sales Analysis: Trends and Key Factors</h3>
+                <p>An exploratory data analysis was used to identify patterns and answer key questions about car sales. I used Pandas to clean and manipulate the data, as well as Matplotlib and Seaborn to visualize sales trends based on variables such as brand, model, and year.</p>
+                <a href="https://github.com/WaelAboulkacem/Data-Exploration/blob/main/Car%20Sales%20Analysis.ipynb">See the project</a>
             </div>
 
             <!-- Proyecto 4 -->
             <div class="projet-item">
                 <div class="projet-thumbnail">
-                    <img src="/barplot.jpg" alt="Projet 4" />
+                    <img src="/suppluchain.avif" alt="Projet 4" />
                 </div>
-                <h3>Premiers contacts avec l'exploration des données..</h3>
-                <p>L'exploration d'une base de données contenant des informations sur la population afin de répondre à certaines questions a été réalisée en visualisant ces données à l'aide des bibliothèques Pandas, Matplotlib et Python.</p>
-                <a href="https://github.com/WaelAboulkacem/Data-Exploration/blob/main/Analyse_data.ipynb">Voir le projet</a>
+                <h3>Supply Chain Risk & Health Analysis</h3>
+                <p>This project analyzes the supply chain performance of a beauty & makeup product company. It focuses on identifying inventory risks, demand pressure, lead-time bottlenecks, and quality issues using a combination of Python and Power BI. </p>
+                <a href="https://github.com/WaelAboulkacem/Data-Exploration/tree/main/Industrial%20Data%20Analysis%20%26%20KPI%20Reporting%20Project">See the project</a>
             </div>
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2025 Wael Aboulkacem</p>
+        <p>&copy; 2026 Wael Aboulkacem</p>
     </footer>
 
     <script src="script.js"></script>
