--- a/pages/competences.html
+++ b/pages/competences.html
@@ -11,9 +11,9 @@
         <h1><a href="/index.html">Wael Aboulkacem</a></h1>
         <nav>
             <ul>
-                <li><a href="/pages/projets.html">Projets</a></li>
-                <li><a href="/pages/competences.html">Compétences</a></li>
-                <li><a href="/pages/formation.html">Formation</a></li>
+                 <li><a href="/pages/projets.html">Projects</a></li>
+                <li><a href="/pages/competences.html">Skills</a></li>
+                <li><a href="/pages/formation.html">Education</a></li>
                 <li><a href="/pages/contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -76,7 +76,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Wael Aboulkacem</p>
+        <p>&copy; 2026 Wael Aboulkacem</p>
     </footer>
 
     <script src="script.js"></script>
