--- a/pages/competences.html
+++ b/pages/competences.html
@@ -20,15 +20,15 @@
     </header>
 
     <section id="competences">
-        <h2>Mes Compétences</h2>
-        <p>Voici un aperçu de mes compétences techniques et professionnelles dans plusieurs domaines de l'informatique.</p>
+        <h2>My Skills</h2>
+        <p>Here is an overview of my technical and professional skills in several areas of IT.</p>
         
         <div class="competence-cards">
             <!-- Card 1: Langages & Outils -->
             <div class="competence-card">
                 <div class="card-icon">
                 </div>
-                <h3>Programmation & Développement</h3>
+                <h3>Programming & Development</h3>
                 <p>Python (Pandas, NumPy, Scikit-learn, TensorFlow, Tkinter) <br>
                     JavaScript  <br>
                     HTML <br>
@@ -42,8 +42,8 @@
             <div class="competence-card">
                 <div class="card-icon">
                 </div>
-                <h3>Bases de Données</h3>
-                <p>MySQL, MariaDB, SQL, Bases de données relationnelles..</p>
+                <h3>Databases</h3>
+                <p>MySQL, MongoDB, NoSQL, Relational databases...</p>
             </div>
 
             <!-- Card 3: Data Science & Machine Learning -->
@@ -51,24 +51,26 @@
                 <div class="card-icon">
                 </div>
                 <h3>Data Science & Machine Learning</h3>
-                <p>Entraînement et évaluation d'algorithmes (supervisés et non supervisés) avec Scikit-learn.</p>
+                <p>Training and evaluation of algorithms (supervised and unsupervised) with Scikit-learn.</p>
             </div>
 
             <!-- Card 4: Traitement & Visualisation -->
             <div class="competence-card">
                 <div class="card-icon">
                 </div>
-                <h3>Traitement & Visualisation</h3>
-                <p>Préparation des données, visualisation avec Matplotlib, Seaborn.</p>
+                <h3>Processing & Visualisation</h3>
+                <p>Data cleaning, visualisation with Matplotlib and PowerBi (beginner)</p>
             </div>
 
             <!-- Card 5: Manipulation de Datasets -->
             <div class="competence-card">
                 <div class="card-icon">
                 </div>
-                <h3>Manipulation de Datasets</h3>
-                <p>Github (Débutant) <br>
+                <h3>Environment</h3>
+                <p>Github <br>
                     Microsoft Excel <br>
+                    Google Sheets <br>
+                    n8n <br>
                     RStudio <br>
                     VS Code.</p>
             </div>
